--- a/index.html
+++ b/index.html
@@ -1,107 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rock, Paper, Scissors</title>
   <meta charset="UTF-8">
+  <title>Project: Rock, Paper, Scissors Game</title>
+  <link href="styles/reset.css" rel="stylesheet" type="text/css" media="all">
+  <link href="styles/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 
 <body>
 
-<script>
+<div class="container">
+  <h1 id="title">Project: Rock, Paper, Scissors Game</h1>
 
-let playerScore = 0;
-let computerScore = 0;
-let roundResult;
-let roundNumber = 0;
+  <div class="content">
+    <div class="instructions">
+      <p>First player to 5 points wins!</p>
+    </div>
 
-function computerPlay() {
-  let result = Math.random();
+    <div class="score">
+      <p>Player: <span id="playerSpan">0</span> | Computer: <span id="computerSpan">0</span></p>
+    </div>
 
-  if (result <= 0.33) {
-    return ('rock');
-  } else if (result <= 0.66) {
-    return ('paper');
-  } else {
-    return ('scissors');
-  }
-}
+    <div class="button-container">
+      <button class="rock">ROCK</button>
+      <button class="paper" type="button">PAPER</button>
+      <button class="scissors" type="button">SCISSORS</button>
+    </div>
 
-function playRound(playerSelection, computerSelection) {
-  let choice = prompt('Round ' + roundNumber + '\n\nRock, paper, or scissors?');
-  playerSelection = choice.toLowerCase();
-  computerSelection = computerPlay();
+    <div class="selection">
+      <p id="playerSelect"></p>
+      <p id="computerSelect"></p>
+    </div>
 
-  console.log('The player chose ' + playerSelection + '\. The computer chose ' + computerSelection + '\.');
+    <div class="roundResult">
+      <p>Let's play!</p>
+    </div>
 
-  if ((playerSelection !== 'rock') && (playerSelection !== 'paper') && (playerSelection !== 'scissors')) {
-    console.log('The player didn\'t enter a valid choice. Prompting them again...');
-    alert('Please enter a valid choice (rock, paper, or scissors).');
-    return playRound();
-    } else if (playerSelection === computerSelection) {
-      roundResult = 'Draw!';
-      return;
-    }
+    <div class="finalResult"> <!--Did you win or lose?-->
+      <p></p>
+    </div>
+  </div>
+</div>
 
-  if (playerSelection == 'rock') {
-    if (computerSelection == 'paper') {
-      computerScore++;
-      roundResult = 'You lose! Rock gets covered by paper!';
-      return;
-    } else {
-      playerScore++;
-      roundResult = 'You win! Rock smashes scissors!';
-    }
-  }
-
-  if (playerSelection == 'paper') {
-    if (computerSelection == 'scissors') {
-      computerScore++;
-      roundResult = 'You lose! Paper gets cut by scissors!';
-      return;
-    } else {
-      playerScore++;
-      roundResult = 'You win! Paper covers rock!';
-    }
-  }
-
-  if (playerSelection == 'scissors') {
-    if (computerSelection == 'rock') {
-      computerScore++;
-      roundResult = 'You lose! Scissors gets smashed by rock!';
-      return;
-    } else {
-      playerScore++;
-      roundResult = 'You win! Scissors cuts paper!';
-    }
-  }
-
-}
-
-function game() {
-  for (i = 1; i < 6; i++) {
-    roundNumber++;
-    playRound();
-
-    console.log(roundResult);
-
-    if (i === 5) {
-      if (playerScore > computerScore) {
-        console.log('You win! The final score was ' + playerScore + ' to ' + computerScore + '\.');
-        return;
-      } else if (playerScore < computerScore) {
-        console.log('Sorry, you lost. The final score was ' + playerScore + ' to ' + computerScore + '\.');
-        return;
-      } else {
-        console.log('The game is a tie! The final score was ' + playerScore + ' to ' + computerScore + '\.');
-        return;
-      }
-    }
-  }
-}
-
-game();
-
-</script>
-
+<script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
