fixed logic errors, added button disable during game over

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container">
   <h1 id="title">Project: Rock, Paper, Scissors Game</h1>
 
-  <div class="content">
+  <div class="content-container">
     <div class="instructions">
       <p>First player to 5 points wins!</p>
     </div>
@@ -26,7 +26,9 @@
       <button class="paper" type="button">PAPER</button>
       <button class="scissors" type="button">SCISSORS</button>
     </div>
+  </div>
 
+  <div class="results-container">
     <div class="selection">
       <p id="playerSelect"></p>
       <p id="computerSelect"></p>
@@ -36,7 +38,7 @@
       <p>Let's play!</p>
     </div>
 
-    <div class="finalResult"> <!--Did you win or lose?-->
+    <div class="finalResult">
       <p></p>
     </div>
   </div>
